--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "url": "https://github.com/em2046/nova/issues"
   },
   "homepage": "https://github.com/em2046/nova#readme",
-  "devDependencies": {
+  "dependencies": {
     "gulp": "^3.9.1",
     "gulp-sass": "^2.2.0"
   }
