--- a/package.json
+++ b/package.json
@@ -19,5 +19,9 @@
   "dependencies": {
     "gulp": "^3.9.1",
     "gulp-sass": "^3.1.0"
+  },
+  "devDependencies": {
+    "gulp-ejs": "^3.0.1",
+    "gulp-util": "^3.0.8"
   }
 }
